force-app/main/default/objects/Budget_Line__c/Budget_Line__c.object-meta.xml
<CustomObject>
    <description>Object used for storing the individual budget lines for a funding request</description>
    <label>Budget Line</label>
    <nameField>
        <displayFormat>BLID-{000000000}</displayFormat>
        <label>Budget Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>