force-app/main/default/objects/Budget_Line__c/fields/Awarded__c.field-meta.xml
<CustomField>
    <fullName>Awarded__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This is the awarded amount for this budget line</inlineHelpText>
    <label>Awarded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>