force-app/main/default/objects/Budget_Line__c/fields/Change__c.field-meta.xml
<CustomField>
    <fullName>Change__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>This is an amount provided as a change request against the original awarded amount</inlineHelpText>
    <label>Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>