force-app/main/default/objects/Budget_Line__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This is the amount set for this budget line against the payment</inlineHelpText>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>