force-app/main/default/objects/Budget_Line__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>This is the planned spend amount against this budget heading</inlineHelpText>
    <label>Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>