force-app/main/default/objects/Budget_Line__c/fields/Recommended__c.field-meta.xml
<CustomField>
    <fullName>Recommended__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This is the recommended amount based on the assessment of this budget</inlineHelpText>
    <label>Recommended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>