force-app/main/default/objects/Budget_Line__c/fields/Spend__c.field-meta.xml
<CustomField>
    <fullName>Spend__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>This is the spend amount submitted during reporting against this budget line</inlineHelpText>
    <label>Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>